Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -5,6 +5,35 @@
 This is to reserve a spot in the January batch of boards.
 Boards are built by hand at an average rate of 5 boards per week.
 
+Inital spots were assigned based on comments on the ordering page.
+
+Payment via paypal to chris1howell83@gmail.com 
+
+|| Slot || Name || Status || Payment Recieved || Shipped ||
+|| 1 || dvester || planning || || ||
+|| 2 || wilsonlee || planning || || ||
+|| 3 || goldserve || planning || || ||
+|| 4 || bconner || planning || || ||
+|| 5 || richardfstrange || planning || || ||
+|| 6 || pjtiger35 || planning || || ||
+|| 7 || mrpilotron || planning || || ||
+|| 8 || jallison35 || planning || || ||
+|| 9 || alex.PTSbackup || planning || || ||
+|| 10 || Bloomer57 || planning || || ||
+|| 11 || Bela.pkmix || planning || || ||
+|| 12 || mwyatt1604 || planning || || ||
+|| 13 || steven.cox.ee || planning || || ||
+|| 14 || devincarlisto || planning || || ||
+|| 15 || tomofe || planning || || ||
+|| 16 || Dlrood || planning || || ||
+|| 17 || Adrianrosc || planning || || ||
+|| 18 ||  || planning || || ||
+|| 19 ||  || planning || || ||
+|| 20 ||  || planning || || ||
+
+
+
+
 
 
 
