Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -5,7 +5,7 @@
 This is to reserve a spot in the January batch of boards.
 Boards are built by hand at an average rate of 5 boards per week.
 
-Inital spots assigned based on comments on the ordering page. Boards will ship in order, as boards ship unpaid orders will be skipped until paid.
+Inital spots assigned based on comments on the ordering page. Boards will ship in order, as boards ship unpaid orders will be skipped until payment is recieved.
 
 Payment via paypal to chris1howell83@gmail.com 
 
