Edited wiki page Support through web user interface.

--- a/wiki/Support.wiki
+++ b/wiki/Support.wiki
@@ -30,3 +30,5 @@ http://priuschat.com
 Tesla Motors Club
 http://www.teslamotorsclub.com/showthread.php/6171-DIY-Home-EVSE
 
+My Rav4 EV
+http://www.myrav4ev.com/forum/index.php
