Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -38,3 +38,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || ClintonEFisher || || || || ||
 || || barryorlando ||Kit || RGB kit - EV sim || || ||
 || || serge.bierhuizen || Built and tested || RGB built - EV Sim || Paid || ||
+|| || rmbertjones || || || || ||
