Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -46,7 +46,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || vcrllc || || || || ||
 || || 2johnbooker || || || || ||
 || || Sven.Leser || || || || ||
-|| || ClintonEFisher || || || || ||
+|| || ClintonEFisher || Kit || || || ||
 || || barryorlando ||Kit || RGB kit - EV sim || || ||
 || || serge.bierhuizen || Built and tested || RGB built - EV Sim || Paid || ||
 || || rmbertjones || || || || ||
