Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -50,3 +50,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || barryorlando ||Kit || RGB kit - EV sim || Paid || ||
 || || serge.bierhuizen || Built and tested || RGB built - EV Sim || Paid || ||
 || || rmbertjones || || || || ||
+|| || Krull.Justin || || || || ||
