--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -29,13 +29,13 @@ Payment via paypal to chris1howell83@gmail.com
 || 4 || bconner || Built and Tested || RGB built - EV Sim || Paid || ||
 || 5 || richardfstrange || || || || ||
 || 6 || pjtiger35 || || || || ||
-|| 7 || mrpilotron || Kit || RGB LCD kit || Paid || ||
+|| 7 || mrpilotron || Kit * || RGB LCD kit || Paid || ||
 || 8 || jallison1 || || || || ||
 || 9 || alex.PTSbackup || || || || ||
 || 10 || Bloomer57 || || || || ||
 || 11 || bela.okmyx || Built and tested || RGB LCD built || Paid || ||
 || 12 || mwyatt1604 || || || || ||
-|| 13 || steven.cox.ee || || || || ||
+|| 13 || steven.cox.ee || Kit || RGB kit || Paid || ||
 || 14 || devincarlisto || || || || ||
 || 15 || tomofe || || || || ||
 || 16 || vcrllc || Built and Tested || || Paid || ||
