--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -12,6 +12,7 @@
     * [EVSE_Example75A 75A EVSE by chris1howell]
     * [75AOpenEVSE 75A EVSE by mwolrich]
     * [EVSE_LORDSn1per EVSE by Phillip Carlson]
+    * [EVSE_by_4Dolio 30A portable EVSE by 4Dolio]
   * *SAE J1772 Standard*
     * [J1772Basics Basics of J1772]
     * [J1772CableSources Sources for J1772 cables]
